--- a/inkscape_poster_making_tutorial.Rmd
+++ b/inkscape_poster_making_tutorial.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "InkScape: An applied introduction"
+title: "Inkscape: An applied introduction"
 subtitle: "Developing skills for poster, flyer, figure, or graph creation"
 author: "Cyrille Médard de Chardon"
 institute: "Luxembourg Institute of Socio-Economic Research (LISER)<br>&nbsp;<br> ![Digilego logo](imgs/logo_and_text_black.svg)"
@@ -44,11 +44,12 @@ xaringanExtra::use_xaringan_extra(c("tile_view", "animate_css"))
 # Outline
 
 .pl[
-This lesson will be 90 minutes - divided into about a 30 minute interactive outline of how to create posters using InkScape.
+This lesson will be 90 minutes:
+- Starting with the basics of using Inkscape,
+- followed by you practicing or working on your posters,
+- with me assisting in answering any questions you have.
 
-Followed by 60 minutes of you working on your posters, with me assisting in answering any questions you have.
-
-We'll speak briefly about designing a poster, before looking at the basics of InkScape and how you can use it effectively.
+We'll speak briefly about designing a poster, before looking at the basics of Inkscape and how you can use it effectively.
 
 ]
 
@@ -98,20 +99,23 @@ We'll speak briefly about designing a poster, before looking at the basics of In
 
 ---
 
-# InkScape - A **vector** graphics editor
+# Inkscape - A **vector** graphics editor
 
 .pl[
-InkScape is a free and open source vector editor. It's incredibly versatile.
+Inkscape is a free and open source vector editor. 
 
 ![Inkscape](imgs/inkscape_1_2_2.png)
+
+.w40[![vector example](imgs/vector_example.svg)]
+.w40[![raster example](imgs/raster_example.png)]
 ]
 
 .pr[
-Equivalent vector graphics editors programs:
+Equivalent proprietary **vector graphics** editors programs:
 - Adobe Illustrator
 - CorelDraw
 
-Alternatively, raster graphics editors are the other type of 'drawing' system.
+Alternatively, **raster graphics** editors are the other type of 'drawing' system.
 It's most commonly used to edit photographs and for 'painting'.
 
 Raster graphics editor programs:
@@ -142,9 +146,9 @@ Raster graphics editor programs:
 ]
 
 .pull-right[
-![InkScape panels and toolbars](imgs/toolbars.svg)
+![Inkscape panels and toolbars](imgs/toolbars.svg)
 
-InkScape has many Panels and Toolbars.
+Inkscape has many Panels and Toolbars.
 
 Icons may appear different depepending on your theme/icon style.
 ]
@@ -180,7 +184,7 @@ The Status Bar also provides tool shortcuts/controls information.
 ]
 
 .pull-right[
-The **.key[Ctrl], .key[Shift], and .key[Alt]** keys are common **modifiers** in InkScape.
+The **.key[Ctrl], .key[Shift], and .key[Alt]** keys are common **modifiers** in Inkscape.
 
 If you are using a tool and thinking *"It would be nice if I could do X!"*, try using one of these modifier keys as it may provide this functionality.
 
@@ -312,16 +316,16 @@ A .key[Ctrl] rotation locks to 15 degree increments.
 .pull-left[
 You may have done posters or figures in PowerPoint. There you typically just move things forward, backwards, or to the front or back.
 
-**InkScape gives you much finer control if you want it.**
+**Inkscape gives you much finer control if you want it.**
 
-InkScape uses the Layers and Objects metaphor to organize elements.
+Inkscape uses the Layers and Objects metaphor to organize elements.
 You can open the Layer and Objects Panel in the following ways:
 - Object -> Objects...
 - Layer -> Layers...
 
 It results in the same Panel appearing.
 
-.ts[*InkScape recently merged Layers and Objects into one panel. They were different. The Layer menu grouped objects within layers, while the Objects menu shows the layers and their contained objects. You may encounter this in older versions of InkScape (versions < 1.2).]
+.ts[*Inkscape recently merged Layers and Objects into one panel. They were different. The Layer menu grouped objects within layers, while the Objects menu shows the layers and their contained objects. You may encounter this in older versions of Inkscape (versions < 1.2).]
 ]
 
 .pull-right[
@@ -569,7 +573,7 @@ The best method to make a good poster is to get as much feedback from others as 
 # Closing
 
 .pl[
-## InkScape Resources
+## Inkscape Resources
 There are many many resources:
 - [Inkscape](https://inkscape.org/learn/)
 - Google for help
